--- a/FancyImageUploader/Views/Home/AlbumsPreview.cshtml
+++ b/FancyImageUploader/Views/Home/AlbumsPreview.cshtml
@@ -19,15 +19,37 @@
         if (null != imag.FileData)
         {
         <div class="imageBox">
-        @*<a href="@Url.Content("~/Content/img/" + src)" target="_blank"><img src="@Url.Content("~/Content/img/" + src)" alt="Image" class="imagePreview" /></a>
-        *@
-        
         @{
-        var base64 = Convert.ToBase64String(imag.FileData);
+        
+        var base64 = Convert.ToBase64String(imag.FileData); 
         var imgSrc = String.Format("data:image;base64,{0}", base64);
+        int frameHeight = 100;
+        int frameWidth = 135;
+        
+        int imagHeight = frameHeight;
+        int imagWidth = frameWidth;
+        double frameKoeff = (double)((double)frameHeight / (double)frameWidth);
+        if (0 != imag.FileHeight && 0 != imag.FileWidth)   
+            {
+                double imagKoeff = (double)imag.FileHeight/imag.FileWidth;
+                if (imagKoeff >= frameKoeff)
+                {
+                    imagHeight = frameHeight;
+                    imagWidth = Convert.ToInt16(frameHeight/imagKoeff);
+                }
+                else
+                {
+                    imagWidth = frameWidth;
+                    imagHeight = Convert.ToInt16(frameWidth*imagKoeff);
+                }
+            }
+        var str1 = imagWidth.ToString() + "px";
+        var str2 = imagHeight.ToString() + "px";
         }
 
-        <img src="@imgSrc" />
+            
+        
+        <img src="@imgSrc" alt="" style="width: @str1; height: @str2;"/>
         </div>
         }
     }
